tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/string-del.stderr
TOML parse error at line 1, column 19
  |
1 | string-del = "null"
  |                   ^
invalid basic string
